# Cytopath-AI

./: .gitignore  LICENSE  README.md  SECURITY.md  conftest.py  generate_test_image.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  schema.sql  setup_test.py  setup_test_data.py  test_system.py
.github/: SECURITY_ADVISORIES.md
.github/profile/: README.md
.github/workflows/: security.yml
config/: training_config.yaml
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Analysis.tsx  ImageUpload.tsx  Navigation.tsx  Report.tsx
src/: main.py
src/database/: config.py  models.py
src/export/: export_service.py
src/middleware/: security.py
src/model/: classifier.py  interpretability.py
src/preprocessing/: cell_segmentation.py  image_processor.py
src/reporting/: report_generator.py
src/services/: analysis_service.py
src/training/: augmentation.py  dataset.py  train.py  trainer.py
src/validation/: validation_service.py
tests/: conftest.py  test_analysis_service.py  test_classifier.py  test_interpretability.py
web_app/: main.py  wsgi.py
web_app/templates/: index.html
