[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cervical_lesion_detection"
version = "0.1.0"
description = "AI-assisted cervical lesion detection and classification"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
